--- a/src/scss/_show.scss
+++ b/src/scss/_show.scss
@@ -102,6 +102,22 @@ visibility: hidden;
   width: 50%;
   margin-left: 75%;
 }
+.material-symbols-outlined{
+  width: fit-content;
+  border-radius: 48%;
+  text-align: center;
+  padding: 0px;
+}
+@media screen and (prefers-color-scheme: light){
+  #helpButton.material-symbols-outlined{
+    background-color: #5d0303;
+  }
+}
+@media screen and (prefers-color-scheme: dark){
+  #helpButton.material-symbols-outlined{
+    background-color: hsl(123, 61%, 15%);
+  }
+}
 @media screen and (max-width: 431px){
   .show-view{
     max-width: 400px;
