--- a/src/scss/_show.scss
+++ b/src/scss/_show.scss
@@ -110,7 +110,7 @@ visibility: hidden;
 }
 @media screen and (prefers-color-scheme: light){
   #helpButton.material-symbols-outlined{
-    background-color: #5d0303;
+    background-color: #501803;
   }
 }
 @media screen and (prefers-color-scheme: dark){
