--- a/src/scss/_show.scss
+++ b/src/scss/_show.scss
@@ -132,6 +132,9 @@ visibility: hidden;
  
 }
 @media screen and (max-width: 360px){
+  #helpCard{
+    margin-left: -20%;
+  }
   .MuiCard-root{
     max-width: 340px;
   }
